# struct_mapping

./: CONTRIBUTING.md  Cargo.toml  README.md  crates-io.md
struct_mapping/: Cargo.toml
struct_mapping/src/: impls.rs  lib.rs
struct_mapping_derive/: Cargo.toml
struct_mapping_derive/src/: internal.rs  lib.rs
struct_mapping_test/: Cargo.toml
struct_mapping_test/src/: lib.rs
