[package]
name = "struct_mapping_test"
version = "1.0.0"
edition = "2021"
authors = ["Walter Bonetti <walter.bonetti@epitech.eu>"]
license = "MIT OR Apache-2.0"
description = "Token StructMapping for testing StructMapping implementations"
keywords = ["struct_mapping", "serialization", "testing", "dev-dependencies"]
include = ["src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
repository = "https://github.com/IniterWorker/struct_mapping"

[dependencies]
struct_mapping = { version = "1.0", path = "../struct_mapping" }

[dev-dependencies]
struct_mapping = { version = "1.0", path = "../struct_mapping" }
struct_mapping_derive = { version = "1.0", path = "../struct_mapping_derive" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
